Chore/sonarqube vulnerabilites (#109)
* chore: fix trivial sonarqube vulnerabilites

* chore: fix remaining trivial vulnerabilities

* chore: format code